--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
             <version>4.3.4.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.2</version>
+        </dependency>
     </dependencies>
 
 
