--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
                 <version>2.6</version>
                 <configuration>
                     <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
-                    <warName>restaurantapp</warName>
+                    <warName>RestaurantApp</warName>
                 </configuration>
             </plugin>
         </plugins>
