conected to database

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,5 @@
-jdbc.driver.class=mysql
-jdbc.url=jbdc
-jdbc.user=user
-jdbc.password=1111
-jdbc.max.connections=1
-jdbc.min.connections=5
+jdbc.driver.class=org.sqlite.JDBC
+jdbc.url=jdbc:sqlite:C:/Tomcat/databases/restaurant.sqlite
+jdbc.max.connections=5
+jdbc.min.connections=1
 jdbc.acquire.increment=1
