--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,7 @@
-jdbc.driver.class=org.sqlite.JDBC
-jdbc.url=jdbc:sqlite:C:/Tomcat/databases/restaurant.sqlite
+jdbc.driver.class=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://localhost:5432/restaurant
+jdbc.user=postgres
+jdbc.password=1234
 jdbc.max.connections=5
 jdbc.min.connections=1
 jdbc.acquire.increment=1
